@@ -16,7 +16,7 @@ Build-Depends: bison,
                dpkg-dev (>= 1.16.2),
                flex,
                gperf,
-               iptables-dev,
+               iptables-dev [linux-any],
                libcap-dev [linux-any],
                libcurl4-openssl-dev | libcurl3-dev | libcurl2-dev,
                libgcrypt20-dev | libgcrypt11-dev,
